<resources>
    <string name="app_name">Road Companion</string>
    <string name="userspage_emptylist_text">აქ შეგიძლიათ დაამატოთ პარკირების ლოტები შემდგომი დაკოპირებისათვის.</string>
    <string name="yes_btn">დიახ</string>
    <string name="no_btn">არა</string>
    <string name="are_you_sure_to_delete_code">ნამდვილად გსურთ %s-ის ამოშლა?</string>
    <string name="which_number_to_check_out">შეიყვანეთ ახალი ლოტის ნომერი</string>
    <string name="cancel_btn">გაუქმება</string>
    <string name="invalid_code_toast">ლოტი არასწორია</string>
    <string name="success">წარმატება!</string>
    <string name="parking_status_header">პარკირების სტატუსი:</string>
    <string name="parking_status_disabled">გამორთული</string>
    <string name="start_button">ჩართვა</string>
    <string name="add_code_button">დაამატეთ ლოტი</string>
    <string name="parking_status_enabled_text">ჩართულია</string>
    <string name="parking_status_disabled_text">გამორთულია</string>
    <string name="stop_button">გამორთვა</string>
    <string name="copied_toastmsg">დაკოპირებულია!</string>
    <string name="ask_parking_message">აქტივობის თვალთვალი %s. გსურთ Tbilisi Parking აპლიკაციის გახსნა?</string>
    <string name="tracking_status_started">დაწყებულია</string>
    <string name="tracking_status_stopped">შეწყვეტილია</string>
    <string name="ok_button">OK</string>
    <string name="reminder_notification_title">Road Companion შეხსენება</string>
    <string name="reminder_notification_text">არ დაგავიწყდეთ პარკირების გამორთვა</string>
    <string name="reminder_notifchannel_title">შეხსენებები</string>
    <string name="reminder_notifchannel_description">პარკირების შეხსენებები</string>
    <string name="persistent_notification_text">თვალთვალი ჩართულია</string>
    <string name="google_billing_licensekey" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEApOIgZQhYsrCmxtLzwz49Hv4aNmjOMew0OVmbLPTiSoAbrKMa16ATt86lcGoAtgiWEIhZ22AYB6SWLEFww4JzWpVBpCIJOQDJ2hJPMwCXhiCrI2MIccKqTEkPLge5DBZLvTl7vQRSK1yQTFqjJZuPagyC6yUODowdWVI/hBek8T7g3XNU3b6A5PBFppZaCHSburvWb6zee35ki5k8bpzHJKM0MHCWTko1o/SL6EnWWyG8ktDYPbZyir7xXY5bCR02Y2ltH56LvbgPe9Wm+fbOkFGJyDs/YhdkJcmLfbBpNOGTCYgETNsvoXoW4uoMVDzzl+TDU7LpioCifIvY+ewt9wIDAQAB</string>
    <string name="main_menu_settings">პარამეტრები</string>
    <string name="main_menu_about">აპის შესახებ</string>
    <string name="main_menu_managesubscriptions">გამოწერების მართვა</string>
    <string name="error_prefix">შეცდომა: </string>
    <string name="no_purchasable_skus_found">გაყიდვადი პროდუქტები ვერ მოიძებნა</string>
    <string name="inavlid_purchase">არასწორი შენაძენი</string>
    <string name="purchase_pending_toast">შენაძენი მოლოდინის მდგომარეობაშია, გთხოვთ დაამთავროთ ტრანზაქცია</string>
    <string name="subscription_not_found">გამოწერა %s ვერ მოიძებნა</string>
    <string name="please_choose_plan">აირჩიეთ გამოწერა:</string>
    <string name="btn_subscribe">გამოწერა</string>
    <string name="manage_subscriptions_on_google">Google Play-ზე გამოწერების მართვა</string>
    <string name="btn_goto_googleplay">გადასვლა Google Play-ზე</string>
    <string name="checking_subscription_status">მინდინარეობს გამოწერის გადამოწმება</string>
    <string name="current_plan">მიმდინარე ტარიფი</string>
    <string name="change_plan">ტარიფის შეცვლა</string>
    <string name="subscription_will_be_updated_soon">გამოწერა მალე განახლდება</string>
    <string name="purchase_canceled_toast">ყიდვა გაჩერებულია</string>
    <string name="free_trial_explanation">პირველი შენაძენის შემდეგ მოგეცემათ 7-დღიანი უფასო მოხმარების ვადა, რომლის შემდეგაც გადახვალთ ზემოთ აღწერილ ტარიფზე. მეტი ინფორმაციისთის ყურადღება მიაქციეთ Google Play ყიდვის ფანჯარას.</string>
    <string name="error_while_checking_subscription_status">გამოწერის გადამოწმების დროს დაფიქსირდა შეცდომა</string>
    <string name="btn_tryagain">სცადეთ ხელახლა</string>
    <string name="title_activity_settings">პარამეტრები</string>

    <string name="settings_pleaserestart">გთხოვთ გადატვირთოთ აპლიკაცია</string>
    <string name="settings_general_title">მთავარი</string>
    <string name="settings_language_title">ენა</string>
    <string name="settings_notiftimes_title">შეხსენებების რაოდენობა</string>
    <string name="fifteenmin_notification_text">ხომ არ დაგრჩათ Tbilisi Parking-ში წამზომი ჩართული?</string>
    <string name="main_menu_sound">ხმა</string>
    <string name="menuitem_sound_on">ხმა: ჩართულია</string>
    <string name="menuitem_sound_off">ხმა: გამორთულია</string>
    <string name="please_install_tbilisiparking_toast">პირველ რიგში დააყენეთ Tbilisi Parking</string>
    <string name="couldnt_open_tbilisiparking">Tbilisi Parking აპლიკაციის გახსნა ვერ მოხერხდა</string>
    <string name="no_subscription_bought_yet">გამოწერა ჯერ არაა ნაყიდი</string>
</resources>