<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_screen_bg">

    <LinearLayout
        android:id="@+id/linearLayoutNotYetPaid"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/please_choose_plan" />

        <Button
            android:id="@+id/buttonSubscribe3M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_subscribe" />

        <Button
            android:id="@+id/buttonSubscribe6M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_subscribe" />

        <Button
            android:id="@+id/buttonSubscribe1Y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_subscribe" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textStyle="italic"
            android:justificationMode="inter_word"
            android:text="@string/free_trial_explanation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:text="@string/manage_subscriptions_on_google" />


        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/buttonGoToGooglePlayFromSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_goto_googleplay"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCheckingPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/checking_subscription_status"
            android:textColor="@color/white"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/linearLayoutErrorOccurred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/error_while_checking_subscription_status" />

        <TextView
            android:id="@+id/textViewErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="ERROR_TEXT" />

        <Button
            android:id="@+id/buttonTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_tryagain" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:text="@string/manage_subscriptions_on_google" />


        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/buttonGoToGooglePlayFromError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_goto_googleplay"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>