<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_screen_bg"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutParkingStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@drawable/parking_status_background"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parking_status_header"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewParkingStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/parking_status_disabled"
                android:textColor="@color/white"
                android:textSize="28sp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOpenParking"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            app:cornerRadius="20dp"
            android:text="@string/start_button" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:id="@+id/buttonAddParkingCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/add_code_button"
            app:iconGravity="textStart"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_baseline_add_circle_outline_24" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/noCodesAddedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imageViewNoCodesBackground"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:tint="@color/white"
                android:src="@drawable/ic_baseline_list_alt_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewNoUsersDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/userspage_emptylist_text"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewNoCodesBackground"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewParkingCodes"
            android:fadeScrollbars="false"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scrollbars="vertical"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>